# agent-harness

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-executor.yml  publish-pypi.yml
agents/: base.py
examples/: complex_sysaudit_demo.py  coordinator_demo.py  durable_memory_demo.py  executor_bridge_demo.py  mcp_auth_demo.py  mcp_demo.py  openai_demo.py  persistent_agent_demo.py  quickstart.py  subscription_auth_demo.py  vision_demo.py
executor/: Cargo.toml
executor/src/: main.rs
harness/: agent_tree.py  annotation.py  background_tasks.py  cancellation.py  checkpoint.py  cli.py  console.py  events.py  executor_bridge.py  hitl.py  model_switching.py  oauth_browser.py  otel.py  persistent.py  persistent_completion.py  persistent_controls.py  persistent_prompt.py  plan_mode.py  runtime.py  sandbox.py  session_memory.py  skills.py  steering.py  streaming.py  tool_policy.py  trace.py  trace_viewer.py  utils.py
harness/llm/: __init__.py  _streaming.py  anthropic.py  auth.py  claude_code.py  fallback.py  openai.py  openai_codex.py  routing.py
memory/: episodic_lance.py  manager.py  redis_store.py  stores.py  working.py
orchestrator/: planner.py  streaming.py
tests/: conftest.py  test_agents_base.py  test_annotation.py  test_anthropic_llm.py  test_background_tasks.py  test_budget_guard.py  test_cancellation.py  test_checkpoint_resume.py  test_claude_code_llm.py  test_cli.py  test_console_renderer.py  test_defensive_trailing_user.py  test_event_payloads.py  test_executor_bridge.py  test_fallback_llm.py  test_fan_in.py  test_hitl_banner.py  test_http_fetch.py  test_llm_auth.py  test_mcp_adapter.py  test_mcp_auth.py  test_memory.py  test_memory_reconciler.py  test_memory_touchpoints.py  test_model_switching.py  test_oauth_browser.py  test_openai_codex_llm.py  test_openai_llm.py  test_orchestrator.py  test_otel.py  test_parse_action_json.py  test_per_call_site_llm.py  test_persistent_agent.py  test_persistent_completion.py  test_persistent_controls.py  test_persistent_prompt.py  test_plan_approval.py  test_plan_mode.py  test_plan_mode_controller.py  test_redis_store.py  (+15 more)
tools/builtin/: background.py  fetch_image.py  http_fetch.py  subagent.py
tools/mcp/: __init__.py  adapter.py  auth.py
