[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "react-agent-harness"
version = "0.3.0"
description = "Multi-agent LLM orchestration: hybrid DAG planning, two-tier memory, streaming"
requires-python = ">=3.10"
dependencies = [
    # Rich interactive steering + HITL — multi-line input, history, tab
    # completion, persistent prompt that survives streaming agent output.
    # Used by harness.steering and harness.hitl.
    "prompt_toolkit>=3.0",
]

[project.scripts]
agent-harness = "harness.cli:main"

[project.optional-dependencies]
# Real episodic vector store (LanceDB + local embeddings).
# Without these, fall back to memory.stores.InMemoryEpisodicStore.
lance = [
    "lancedb>=0.6",
    "pyarrow>=14",
    "sentence-transformers>=2.7",
]
# Durable semantic store backed by Redis.
redis = ["redis>=5.0"]
# Convenience extras for users wiring real LLM clients.
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
# HTTP-fetch builtin tool — async client.
http = ["httpx>=0.27"]
# MCP (Model Context Protocol) tool adapter.
mcp = ["mcp>=1.0"]
# OpenTelemetry tracing — visualise runs in Jaeger / Datadog / etc.
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# Dev: tests + lint + types + fakeredis + httpx + openai for unit tests.
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
    "ruff>=0.4",
    "mypy>=1.10",
    "redis>=5.0",
    "fakeredis>=2.20",
    "httpx>=0.27",
    "openai>=1.0",
    "respx>=0.21",
    "mcp>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "harness*", "memory*", "orchestrator*", "tools*"]
exclude = ["examples*", "executor*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-too-long handled by formatter; keep narrative comments readable
