[package]
name = "ah-executor"
version = "0.0.1"
edition = "2021"
description = "Sandboxed subprocess executor for react-agent-harness"
license = "MIT"
repository = "https://github.com/ramannanda9/agent-harness"
documentation = "https://github.com/ramannanda9/agent-harness#executor"

[[bin]]
name = "ah-executor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
